[package]
name = "tauri-plugin-aptabase"
version = "1.0.0"
license = "MIT"
description = "Tauri Plugin for Aptabase: Open Source, Privacy-First and Simple Analytics for Mobile, Desktop and Web Apps"
authors = ["Guilherme Oenning"]
edition = "2021"
rust-version = "1.70"
readme = "README.md"
repository = "https://github.com/aptabase/tauri-plugin-aptabase"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-aptabase"

[dependencies]
os_info = "3.9.2"
tauri = "2.10.2"
tokio = "1.43.0"
futures = "0.3.31"
serde = "1.0.217"
serde_json = "1.0.138"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "http2",
] }
time = { version = "0.3.47", features = ["formatting"] }
rand = "0.9.2"
log = "0.4.29"
sys-locale = "0.3.2"

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }